--- a/index.html
+++ b/index.html
@@ -290,8 +290,8 @@
 					<div class="cover"></div>
 					<h2 class="spacer">Quick Hits</h2>
 					<h5>↣ Cleaned up builder mode filters menu</h5>
-					<h5>↣ Cleaned up lock to dashboard (new icons style tweaks)</h5>
-					<h5>↣ Public bug fixes and improvements</h5>
+					<h5>↣ Cleaned up lock to dashboard (new icons and style tweaks)</h5>
+					<h5>↣ Public site bug fixes and improvements</h5>
 					<h5>↣ Printed materials for bullhorn engage event</h5>
 				</section>	
 			</div>
